# django-quran

./: .gitignore  MANIFEST.in  README.md  README.rst  manage.py  pyproject.toml  s.py  todo.txt
djangoquran/: apps.py  buckwalter.py  urls.py  views.py
djangoquran/datas/: lemmas.csv
djangoquran/management/commands/: loadquran.py
djangoquran/migrations/: 0001_initial.py
djangoquran/static/: style.css
djangoquran/templates/djangoquran/: base.html  index.html  root.html  root_list.html  surah.html  word.html
djangoquran/templatetags/: extra_filters.py
djangoquran2/: apps.py  buckwalter.py  models.py  urls.py  views.py
djangoquran2/datas/: words.csv
djangoquran2/management/commands/: loadquran.py
djangoquran2/templates/djangoquran2/: _table.html  base.html  index.html  root.html  root_list.html  surah.html  word.html
djangoquran2/templatetags/: extra_filters.py
myapp/: urls.py  views.py
myapp/templates/parts/: lemma.html  root.html  root_index.html  word.html
myquran/: settings.py  urls.py  wsgi.py
quran/: admin.py  models.py  urls.py
quran/data/: __init__.py
quran/data/zekr/: aisha_bewley.txt  translator_data.txt
quran/management/commands/: quran_loaddata.py
quran/migrations/: 0001_initial.py
sample/: manage.py
sample/myapp/: urls.py  views.py
sample/myapp/static/: style.css
sample/myapp/static/djangodoc/: t.html
sample/myapp/templates/: aya.html  base.html  index.html  root_index.html  search.html  search_result.html  sura.html
sample/myapp/templates/parts/: aya.html  lemma.html  root.html  word.html
sample/myapp/templatetags/: extra_filters.py
sample/myquran/: settings.py  urls.py  wsgi.py
sample/mysite/: settings.py  urls.py
